tests/ui/fail/wrong-unit-yield-type.rs

#[fauxgen::generator()]
fn gen() {
    r#yield!("test");
}

fn main() {}
